@@ -105,8 +105,27 @@ thread_entry_point(cl_object process)
 	/* 3) If everything went right, we should be exiting the thread
 	 *    through this point.
 	 */
-	thread_cleanup(TlsGetValue(cl_env_key));
+	thread_cleanup(&cl_env);
 	return 1;
+}
+
+void
+ecl_import_current_thread(cl_object name, cl_object bindings)
+{
+	cl_object process = mp_make_process(4, @':name', name, @':initial-bindings', bindings);
+#ifdef WITH___THREAD
+	cl_env_p = process->process.env;
+#else
+	TlsSetValue(cl_env_key, (void *)process->process.env);
+#endif
+	ecl_init_env(&cl_env);
+        init_big_registers();
+}
+
+void
+ecl_release_current_thread(void)
+{
+	thread_cleanup(&cl_env);
 }
 
 @(defun mp::make-process (&key name ((:initial-bindings initial_bindings) Ct))
